<resources>
    <string name="app_name">Find Move</string>
    <string name="move_name">نام فيلم:</string>
    <string name="name_director">نام كارگردان:</string>
    <string name="year_of_construction">سال ساخت:</string>
    <string name="name_author">نام نويسنده:</string>
    <string name="extension_method">extension method</string>
    <string name="hint_expression">عبارت عددی یا محاسباتی</string>
    <string name="hint_move_list_app">تصاویر فیلم ها</string>
    <!--menu drawer-->
    <string name="separator_comma"><font color="blue">3 رقم جدا کردن اعداد</font></string>
    <string name="fa_number"><font color="blue">اعداد فارسی</font></string>
    <string name="en_number"><font color="blue">اعداد انگلیسی</font></string>
    <string name="calc_expression"><font color="blue">محاسبه عبارات</font></string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_star">*</string>
    <string name="key_slash">/</string>
</resources>