<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="ltr">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/keyOne"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_1" />
            <Button
                android:id="@+id/keyTwo"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_2" />
            <Button
                android:id="@+id/keyThree"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_3"/>
            <Button
                android:id="@+id/keyFore"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_4"/>
            <Button
                android:id="@+id/keyFive"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/keySix"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_6"/>
            <Button
                android:id="@+id/keySeven"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_7"/>
            <Button
                android:id="@+id/keyEight"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_8"/>
            <Button
                android:id="@+id/keyNine"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_9"/>
            <Button
                android:id="@+id/keyZero"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/keyPlus"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_plus"/>
            <Button
                android:id="@+id/keyMinus"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_minus"/>
            <Button
                android:id="@+id/keyStar"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_star"/>
            <Button
                android:id="@+id/keySlash"
                style="@style/KeyMyKeyboardWeightRow"
                android:text="@string/key_slash"/>
        </LinearLayout>
    </LinearLayout>
</merge>