<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/gray100"
    app:cardCornerRadius="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layoutDirection="ltr">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pictureFromMove"
            android:layout_width="124dp"
            android:layout_height="124dp"
            app:shapeAppearanceOverlay="@style/ShapeCircleImageView"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textNameMove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/move_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/pictureFromMove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textNameDirector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_director"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/pictureFromMove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameMove" />
        <TextView
            android:id="@+id/textYearOfConstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/year_of_construction"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/pictureFromMove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameDirector"/>
        <TextView
            android:id="@+id/textNameAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_author"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/pictureFromMove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textYearOfConstruction"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/pictureFromMove"
            android:id="@+id/expandedLayout"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnExpanded"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:background="@drawable/background_ripple_circle_pink"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow_up" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expandTextView"
                android:maxLines="3"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                android:ellipsize="end"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>