<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/gray100"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/clickItem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="138dp"/>
        <View
            android:id="@+id/colors"
            android:layout_width="4dp"
            android:layout_height="138dp"
            android:background="@color/blueA200"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/pictureFromMove"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintRight_toLeftOf="@+id/colors"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeCircleImageView"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="124dp"
            android:orientation="vertical"
            android:id="@+id/layoutVertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pictureFromMove"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/textNameMove"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/move_name"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/textNameDirector"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name_director"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textYearOfConstruction"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/year_of_construction"
                android:textColor="@color/black"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textNameAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/pictureFromMove"
            android:gravity="center"
            android:text="@string/name_author"
            android:textColor="@color/black"
            android:ellipsize="marquee"/>
        <ImageButton
            android:id="@+id/btnExpanded"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:background="@drawable/background_ripple_circle_pink"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNameAuthor"
            android:layout_marginStart="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expandTextView"
            android:maxLines="3"
            android:justificationMode="inter_word"
            android:layoutDirection="rtl"
            tools:targetApi="o"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnExpanded"
            android:layout_marginHorizontal="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>